--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ src/main/resources/view/endscreen-module/
 bots/NN
 best.pkl
 last_generation_fitness.txt
+dependency-reduced-pom.xml
+src/main/resources/node_modules/
